--- a/index.html
+++ b/index.html
@@ -1,289 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Deadwave</title>
-<style>
-body {
-  margin:0;
-  background:#0b0b0b;
-  overflow:hidden;
-  font-family: Arial, sans-serif;
-}
-canvas { display:none; }
-
-/* MAIN MENU */
-#menu {
-  position:fixed;
-  inset:0;
-  background:radial-gradient(circle, #111, #000);
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  color:white;
-  z-index:10;
-}
-#menu h1 {
-  font-size:72px;
-  letter-spacing:4px;
-}
-.menu-btn {
-  padding:15px 40px;
-  margin:10px;
-  font-size:20px;
-  background:#222;
-  border:2px solid white;
-  color:white;
-  cursor:pointer;
-}
-.menu-btn:hover { background:#444; }
-
-/* SHOP */
-#shop {
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.9);
-  display:none;
-  color:white;
-  text-align:center;
-}
-#shop h2 { margin-top:60px; }
-
-.perks {
-  display:flex;
-  justify-content:center;
-  gap:20px;
-  margin-top:40px;
-}
-.perk {
-  width:200px;
-  padding:20px;
-  border:2px solid white;
-  background:#111;
-  cursor:pointer;
-}
-.perk:hover { background:#222; }
-</style>
-</head>
-<body>
-
-<div id="menu">
-  <h1>DEADWAVE</h1>
-  <p>Click Play to start</p>
-  <button class="menu-btn" onclick="startGame()">Play</button>
+<div id="stats">
+  <div><b>STATS</b></div>
+  <div id="stat-damage">Damage: 1</div>
+  <div id="stat-firerate">Fire Rate: 500ms</div>
+  <div id="stat-speed">Speed: 4</div>
+  <div id="stat-regen">Regen: 0</div>
+  <hr>
+  <div><b>PERKS</b></div>
+  <div id="perk-damage">Damage x0</div>
+  <div id="perk-firerate">Fire Rate x0</div>
+  <div id="perk-regen">Regen x0</div>
+  <div id="perk-speed">Speed x0</div>
 </div>
-
-<div id="shop">
-  <h2>Choose a Perk</h2>
-  <div class="perks">
-    <div class="perk" onclick="perk('damage')">+1 Damage</div>
-    <div class="perk" onclick="perk('regen')">Faster Regen</div>
-    <div class="perk" onclick="perk('firerate')">Faster Fire Rate</div>
-    <div class="perk" onclick="perk('speed')">+Speed</div>
-  </div>
-  <br><br>
-  <button class="menu-btn" onclick="nextWave()">Continue</button>
-</div>
-
-<canvas id="game"></canvas>
-
-<script>
-const canvas = document.getElementById("game");
-const ctx = canvas.getContext("2d");
-canvas.width = innerWidth;
-canvas.height = innerHeight;
-
-// MUSIC
-const bgm = new Audio("https://cdn.pixabay.com/download/audio/2022/10/25/audio_6b7b2d90b4.mp3");
-bgm.loop = true;
-bgm.volume = 0.5;
-
-// GAME STATE
-let paused = false;
-
-const player = {
-  x: canvas.width/2,
-  y: canvas.height/2,
-  r: 18,
-  health: 100,
-  maxHealth: 100,
-  speed: 4,
-  lastHit: 0
-};
-
-let bullets=[], zombies=[], keys={}, mouse={x:0,y:0};
-let wave=1, kills=0, damage=1, regenBonus=0, speedBonus=0;
-let shootCooldown=500, lastShot=0, inShop=false;
-const mapPadding = 60;
-
-// INPUT
-addEventListener("keydown",e=>{
-  keys[e.key.toLowerCase()]=true;
-  if(e.key.toLowerCase()==="p") paused=!paused;
-});
-addEventListener("keyup",e=>keys[e.key.toLowerCase()]=false);
-addEventListener("mousemove",e=>{mouse.x=e.clientX;mouse.y=e.clientY});
-addEventListener("mousedown",shoot);
-
-// MENU
-function startGame(){
-  document.getElementById("menu").style.display="none";
-  canvas.style.display="block";
-  bgm.play();
-  resetGame();
-  spawnWave();
-  update();
-}
-
-function resetGame(){
-  bullets=[]; zombies=[];
-  wave=1; kills=0;
-  damage=1; regenBonus=0; speedBonus=0;
-  shootCooldown=500;
-  player.health=player.maxHealth;
-  player.x=canvas.width/2;
-  player.y=canvas.height/2;
-  paused=false;
-}
-
-// SHOOT
-function shoot(){
-  if(inShop || paused || Date.now()-lastShot<shootCooldown) return;
-  lastShot=Date.now();
-  const a=Math.atan2(mouse.y-player.y,mouse.x-player.x);
-  bullets.push({x:player.x,y:player.y,dx:Math.cos(a)*10,dy:Math.sin(a)*10});
-}
-
-// ZOMBIES
-function spawnZombie(type){
-  let z={x:Math.random()*canvas.width,y:Math.random()*canvas.height};
-  if(type==="fast"){z.r=15;z.speed=3;z.health=2;}
-  else if(type==="tank"){z.r=28;z.speed=1;z.health=6+wave;}
-  else if(type==="boss"){z.r=40;z.speed=1+wave*.05;z.health=15+wave*2;z.boss=true;}
-  else {z.r=20;z.speed=1.5;z.health=3;}
-  z.maxHealth=z.health;
-  zombies.push(z);
-}
-function spawnWave(){
-  zombies=[];
-  for(let i=0;i<wave*2;i++){
-    spawnZombie(Math.random()<.2?"fast":Math.random()<.35?"tank":"normal");
-  }
-  if(wave%10===0) spawnZombie("boss");
-}
-
-// SHOP
-function perk(p){
-  if(p==="damage") damage++;
-  if(p==="regen") regenBonus+=0.05;
-  if(p==="firerate" && shootCooldown>200) shootCooldown-=50;
-  if(p==="speed") speedBonus+=0.5;
-}
-function nextWave(){
-  inShop=false;
-  document.getElementById("shop").style.display="none";
-  wave++;
-  spawnWave();
-}
-
-// GAME LOOP
-function update(){
-  requestAnimationFrame(update);
-  if(paused) return;
-
-  ctx.clearRect(0,0,canvas.width,canvas.height);
-
-  // MOVEMENT
-  const moveSpeed = player.speed + speedBonus;
-  if(keys.w) player.y-=moveSpeed;
-  if(keys.s) player.y+=moveSpeed;
-  if(keys.a) player.x-=moveSpeed;
-  if(keys.d) player.x+=moveSpeed;
-
-  player.x=Math.max(mapPadding,Math.min(canvas.width-mapPadding,player.x));
-  player.y=Math.max(mapPadding,Math.min(canvas.height-mapPadding,player.y));
-
-  // PLAYER
-  ctx.fillStyle="#d2b48c";
-  ctx.beginPath();
-  ctx.arc(player.x,player.y,player.r,0,Math.PI*2);
-  ctx.fill();
-
-  // BULLETS
-  bullets.forEach((b,i)=>{
-    b.x+=b.dx; b.y+=b.dy;
-    ctx.fillStyle="#fff";
-    ctx.fillRect(b.x,b.y,4,4);
-    zombies.forEach((z,zi)=>{
-      if(Math.hypot(b.x-z.x,b.y-z.y)<z.r){
-        z.health-=damage;
-        bullets.splice(i,1);
-        if(z.health<=0){
-          zombies.splice(zi,1);
-          kills++;
-        }
-      }
-    });
-  });
-
-  // ZOMBIES + HEALTH BARS
-  zombies.forEach(z=>{
-    const a=Math.atan2(player.y-z.y,player.x-z.x);
-    z.x+=Math.cos(a)*z.speed;
-    z.y+=Math.sin(a)*z.speed;
-
-    if(Math.hypot(player.x-z.x,player.y-z.y)<player.r+z.r){
-      if(Date.now()-player.lastHit>800){
-        player.health-=10;
-        player.lastHit=Date.now();
-      }
-    }
-
-    ctx.fillStyle=z.boss?"#8b0000":"#228b22";
-    ctx.beginPath();
-    ctx.arc(z.x,z.y,z.r,0,Math.PI*2);
-    ctx.fill();
-
-    ctx.fillStyle="red";
-    ctx.fillRect(z.x-20,z.y-z.r-10,40,5);
-    ctx.fillStyle="lime";
-    ctx.fillRect(z.x-20,z.y-z.r-10,40*(z.health/z.maxHealth),5);
-  });
-
-  // REGEN
-  if(Date.now()-player.lastHit>3000 && player.health<player.maxHealth){
-    player.health+=0.1+regenBonus;
-  }
-
-  // DEATH → MENU
-  if(player.health<=0){
-    canvas.style.display="none";
-    document.getElementById("menu").style.display="flex";
-    bgm.pause();
-    return;
-  }
-
-  // UI
-  ctx.fillStyle="white";
-  ctx.font="12px Arial";
-  ctx.fillText(
-    `DMG:${damage} SPD:+${speedBonus} REG:+${regenBonus.toFixed(2)} FR:${shootCooldown}ms`,
-    10,canvas.height-10
-  );
-
-  ctx.fillText("Wave "+wave,canvas.width-80,20);
-
-  ctx.fillStyle="red";
-  ctx.fillRect(canvas.width/2-100,canvas.height-40,200,12);
-  ctx.fillStyle="lime";
-  ctx.fillRect(canvas.width/2-100,canvas.height-40,200*(player.health/player.maxHealth),12);
-
-  if(zombies.length===0 && !inShop){
-    inShop=true;
-    document.getElementById("shop").style.display="block";
-  }
-}
-</script>
-</body>
-</html>
