--- a/shop.html
+++ b/shop.html
@@ -20,3 +20,8 @@
 <script src="js/perks.js"></script>
 </body>
 </html>
+<script>
+window.addEventListener("load", () => {
+  document.body.classList.add("loaded");
+});
+</script>
