--- a/index.html
+++ b/index.html
@@ -16,3 +16,10 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
+<script>
+window.addEventListener("load", () => {
+  document.body.classList.add("loaded");
+});
+</script>
+
